<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>gp8_axia80_ee3_7</name>
  <version>0.0.0</version>
  <description>IKFast plugin for yaskawa</description>
  <license>BSD</license>
  <maintainer email="rob@todo.todo">rob</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <export>
    <moveit_core plugin="${prefix}/yaskawa_gp8_axia80_ee3_7_moveit_ikfast_plugin_description.xml"/>
  </export>
</package>
